--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh": "^2.8.9",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "pages": "^0.0.16",
     "prettier": "3.5.3",
